<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wearos_bg"
    android:padding="15dp"
    tools:context=".views.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <LinearLayout
                android:id="@+id/mainLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/medgift_companion"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/notificationsButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/bg_mainmenuitem"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/icon_bg">

                        <ImageView
                            android:id="@+id/icon1"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/notification" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/menu_item_title_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/notifications"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/healthtipsButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/bg_mainmenuitem"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="7dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/icon_bg">

                        <ImageView
                            android:id="@+id/icon3"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_healthtip" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/menu_item_title_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:text="@string/health_tips"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/logoutButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_bg_dark">

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_logout" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="50dp"
                    android:layout_gravity="center"
                    android:layout_height="1dp"
                    android:layout_marginVertical="10dp"
                    android:background="@color/grayTrns" />

                <ImageView
                    android:id="@+id/aboutUsButton"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_info" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/progress"
        layout="@layout/progress" />
</androidx.wear.widget.BoxInsetLayout>